--- a/ios/Podfile
+++ b/ios/Podfile
@@ -49,7 +49,7 @@ target 'RNFirebase' do
     inherit! :complete
     # Pods for testing
   end
-
+  
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
@@ -59,4 +59,8 @@ target 'RNFirebase' do
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  $RNFirebaseAsStaticFramework = true
 end
