--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-firebase/database": "^18.3.0",
     "doctor": "^0.3.0",
     "react": "18.2.0",
     "react-native": "^0.72.4"
